:pencil2: Make data store function

--- a/notebook/titanic.ipynb
+++ b/notebook/titanic.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "[5 rows x 12 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
        "[5 rows x 12 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
        "[8 rows x 7 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -511,7 +511,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +683,7 @@
        "[5 rows x 14 columns]"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -716,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -857,20 +857,24 @@
        "[5 rows x 14 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train['Age'] = df_train['Age'].fillna(df_train['Age'].median())\n",
-    "df_train['n_Embarked'] = df_train['n_Embarked'].fillna(df_train['n_Embarked'].median())\n",
+    "def store_null_to_median(df):\n",
+    "    df['Age'] = df['Age'].fillna(df['Age'].median())\n",
+    "    df['n_Embarked'] = df['n_Embarked'].fillna(df['n_Embarked'].median())\n",
+    "    return df\n",
+    "    \n",
+    "df_train = store_null_to_median(df_train)\n",
     "df_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -893,7 +897,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -902,6 +906,13 @@
     "null_val=df_train.isnull().sum()\n",
     "null_val"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
