:rocket: submit one

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_test = pd.read_csv('input/train.csv')\n",
+    "df_test = pd.read_csv('input/test.csv')\n",
     "df_test.head()"
    ]
   },
