:see_no_evil: Ignore .ipynb_checkpoints/*.*

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -122,6 +122,7 @@
     "    df['Age'].fillna(df['Age'].median(), inplace=True)\n",
     "    df['Cabin'].fillna('0', inplace=True)\n",
     "    df['Embarked'].fillna('0', inplace=True)\n",
+    "    df['Fare'].fillna(df['Fare'].median(), inplace=True)\n",
     "    return df\n",
     "    \n",
     "df_train = store_null_to_median(df_train)\n",
@@ -329,6 +330,13 @@
     "\n",
     "my_solution.to_csv('gender_submission.csv', index_label = [\"PassengerId\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
