:bookmark: Update data

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -260,15 +260,18 @@
    "outputs": [],
    "source": [
     "target = df_train['Survived'].values\n",
-    "features = df_train[[\n",
-    "    'Pclass',\n",
-    "    'Age',\n",
-    "    'n_Sex',\n",
-    "    'Parch',\n",
-    "    'n_Embarked',\n",
-    "    'Fare',\n",
-    "    'n_Cabin'\n",
-    "]].values\n",
+    "\n",
+    "def setData(df):\n",
+    "    return df[[\n",
+    "        'Pclass',\n",
+    "        'n_Sex',\n",
+    "        'Age',\n",
+    "        'Fare',\n",
+    "        'n_Embarked',\n",
+    "        'n_Cabin'\n",
+    "    ]].values\n",
+    "\n",
+    "features = setData(df_train)\n",
     "\n",
     "titanic_tree = tree.DecisionTreeClassifier()\n",
     "titanic_tree = titanic_tree.fit(features, target)"
@@ -305,15 +308,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_features = df_test[[\n",
-    "    'Pclass',\n",
-    "    'Age',\n",
-    "    'n_Sex',\n",
-    "    'Parch',\n",
-    "    'n_Embarked',\n",
-    "    'Fare',\n",
-    "    'n_Cabin'\n",
-    "]].values\n",
+    "test_features = setData(df_test)\n",
     "\n",
     "my_prediction = titanic_tree.predict(test_features)"
    ]
