:pencil2: Dropna Embarked

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -124,7 +124,9 @@
     "    df['Embarked'].fillna('0', inplace=True)\n",
     "    df['Fare'].fillna(df['Fare'].median(), inplace=True)\n",
     "    return df\n",
-    "    \n",
+    "\n",
+    "df_train['Embarked'].dropna()\n",
+    "\n",
     "df_train = store_null_to_median(df_train)\n",
     "df_train.head()"
    ]
@@ -172,7 +174,7 @@
     "    df.loc[df['Cabin'].str.startswith('F'), 'n_Cabin'] = 6\n",
     "    df.loc[df['Cabin'].str.startswith('G'), 'n_Cabin'] = 7\n",
     "    df.loc[df['Cabin'].str.startswith('T'), 'n_Cabin'] = 8\n",
-    "    df.loc[df['Cabin']==('0'), 'n_Cabin'] = df['n_Cabin'].mode()[0]\n",
+    "    df.loc[df['Cabin']==('0'), 'n_Cabin'] = df['n_Cabin'].median()\n",
     "    return df\n",
     "\n",
     "df_train = convert_string_to_number(df_train)\n",
@@ -325,13 +327,6 @@
     "\n",
     "my_solution.to_csv('gender_submission.csv', index_label = [\"PassengerId\"])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
