:wrench: Add auto save to python

--- a/titanic/titanic.ipynb
+++ b/titanic/titanic.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import subprocess\n",
+    "subprocess.run(['jupyter', 'nbconvert', '--to', 'python', 'titanic.ipynb'])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -327,6 +337,13 @@
     "\n",
     "my_solution.to_csv('gender_submission.csv', index_label = [\"PassengerId\"])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
