:pencil: 少し進めた

--- a/titanic/titanic2.ipynb
+++ b/titanic/titanic2.ipynb
@@ -555,7 +555,58 @@
     "\n",
     "1. 欠損値を推測するより正確な方法は、他の相関する特徴量を使用することです。今回のケースでは、年齢、性別、およびPclassの間の相関を記録する。 PclassとGenderの特徴量の組み合わせのセット全体でageの中央値を使用してAgeの値を推測します。Pclass = 1、Gender = 0、Pclass = 1、Gender = 1などの中間の年齢などなど。\n",
     "1. 簡単な方法は、平均と標準偏差の間の乱数を生成することです。\n",
-    "1. 方法1と2を組み合わせる。中央値に基づいて年齢値を推測する代わりに、PclassとGenderの組み合わせのセットに基づいて、平均と標準偏差の間になる乱数を使用する。"
+    "1. 方法1と2を組み合わせる。中央値に基づいて年齢値を推測する代わりに、PclassとGenderの組み合わせのセットに基づいて、平均と標準偏差の間になる乱数を使用する。\n",
+    "\n",
+    "2, 3はランダムノイズが影響するので、毎回結果が異なることになる\n",
+    "ので、1を優先する"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Age\n",
+    "\n",
+    "まとめ再記\n",
+    "* 欠損値を推測するより正確な方法は、他の相関する特徴量を使用する\n",
+    "* 今回のケースでは、年齢、性別、およびPclassの間の相関を記録する\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.FacetGrid(train_df, row='Sex', col='Pclass')\n",
+    "g.map(plt.hist, 'Age')\n",
+    "g.add_legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "guess_ages = np.zeros((len(train_df['Sex'].unique()),len(train_df['Pclass'].unique())))\n",
+    "\n",
+    "for dataset in combine:\n",
+    "    for i in range(0, len(train_df['Sex'].unique())):\n",
+    "        for j in range(0, len(train_df['Pclass'].unique())):\n",
+    "            guess_df = dataset[(dataset['Sex'] == i) & (dataset['Pclass'] == j + 1)]['Age'].dropna()\n",
+    "            age_guess = guess_df.median()\n",
+    "            \n",
+    "            guess_ages[i, j] = int(age_guess / 0.5 + 0.5) * 0.5\n",
+    "            # あんまりちゃんと読めてない\n",
+    "\n",
+    "    for i in range(0, len(train_df['Sex'].unique())):\n",
+    "        for j in range(0, len(train_df['Pclass'].unique())):\n",
+    "            dataset.loc[(dataset['Age'].isnull()) & (dataset['Pclass'] == j + 1) & (dataset['Sex'] == i), 'Age'] = guess_ages[i, j]\n",
+    "            \n",
+    "    dataset['Age'] = dataset['Age'].astype(int)\n",
+    "\n",
+    "train_df.head()"
    ]
   },
   {
