--- a/titanic/titanic2.ipynb
+++ b/titanic/titanic2.ipynb
@@ -614,6 +614,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# 相関チェック\n",
+    "\n",
+    "train_df['AgeBand'] = pd.cut(train_df['Age'], 5) #べんりー\n",
+    "train_df[['AgeBand', 'Survived']].groupby(['AgeBand'], as_index=False).mean().sort_values(by='AgeBand', ascending=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# AgeをAgeBandに置き換える\n",
+    "\n",
+    "for dataset in combine:    \n",
+    "    dataset.loc[ dataset['Age'] <= 16, 'Age'] = 0\n",
+    "    dataset.loc[(dataset['Age'] > 16) & (dataset['Age'] <= 32), 'Age'] = 1\n",
+    "    dataset.loc[(dataset['Age'] > 32) & (dataset['Age'] <= 48), 'Age'] = 2\n",
+    "    dataset.loc[(dataset['Age'] > 48) & (dataset['Age'] <= 64), 'Age'] = 3\n",
+    "    dataset.loc[ dataset['Age'] > 64, 'Age'] = 4\n",
+    "train_df.head()\n",
+    "\n",
+    "train_df = train_df.drop(['AgeBand'], axis=1)\n",
+    "combine = [train_df, test_df]\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
