一個進めた

--- a/titanic/titanic2.ipynb
+++ b/titanic/titanic2.ipynb
@@ -643,6 +643,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ParchとSibSpから新しい特徴量「FamilySizeを作る\n",
+    "ドメイン知識が命だな"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for dataset in combine:\n",
+    "    dataset['FamilySize'] = dataset['SibSp'] + dataset['Parch'] + 1\n",
+    "\n",
+    "train_df[['FamilySize', 'Survived']].groupby(['FamilySize'], as_index=False).mean().sort_values(by='Survived', ascending=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
