カテゴリカル特徴量の変換まで

--- a/titanic/titanic2.ipynb
+++ b/titanic/titanic2.ipynb
@@ -646,7 +646,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ParchとSibSpから新しい特徴量「FamilySizeを作る\n",
+    "ParchとSibSpから新しい特徴量「FamilySize」を作る\n",
     "ドメイン知識が命だな"
    ]
   },
@@ -659,7 +659,7 @@
     "for dataset in combine:\n",
     "    dataset['FamilySize'] = dataset['SibSp'] + dataset['Parch'] + 1\n",
     "\n",
-    "train_df[['FamilySize', 'Survived']].groupby(['FamilySize'], as_index=False).mean().sort_values(by='Survived', ascending=False)"
+    "train_df[['FamilySize', 'Survived']].groupby(['FamilySize'], as_index=False).mean().sort_values(by='FamilySize', ascending=False)"
    ]
   },
   {
@@ -667,7 +667,91 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 0, (1,2,3), それ以上 で分けるといいカンジに見える\n",
+    "\n",
+    "for dataset in combine:\n",
+    "    dataset['FamilySizeId'] = 2\n",
+    "    dataset.loc[dataset['FamilySize'] == 1, 'FamilySizeId'] = 0\n",
+    "    dataset.loc[dataset['FamilySize'] == 2, 'FamilySizeId'] = 1\n",
+    "    dataset.loc[dataset['FamilySize'] == 3, 'FamilySizeId'] = 1\n",
+    "    dataset.loc[dataset['FamilySize'] == 4, 'FamilySizeId'] = 1\n",
+    "    \n",
+    "train_df[['FamilySizeId', 'Survived']].groupby(['FamilySizeId'], as_index=False).mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 増えてきたので、使わなさそうなやつを消す\n",
+    "\n",
+    "train_df = train_df.drop(['Parch', 'SibSp', 'FamilySize'], axis=1)\n",
+    "test_df = test_df.drop(['Parch', 'SibSp', 'FamilySize'], axis=1)\n",
+    "combine = [train_df, test_df]\n",
+    "\n",
+    "train_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# PclassとAgeをかけ合わせた特徴を作ってみる\n",
+    "# これは意図がよくわからないので、データを見てみる\n",
+    "\n",
+    "g = sns.FacetGrid(train_df, col='Pclass', row='Age')\n",
+    "g.map(sns.barplot, 'Survived')\n",
+    "g.add_legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# わからん！\n",
+    "# けど、一応やっておく\n",
+    "\n",
+    "for dataset in combine:\n",
+    "    dataset['Age*Class'] = dataset['Age'] * dataset['Pclass']\n",
+    "    \n",
+    "train_df.loc[:, ['Age*Class', 'Age', 'Pclass']].head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = sns.FacetGrid(train_df, col='Age*Class')\n",
+    "g.map(sns.barplot, 'Survived')\n",
+    "g.add_legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# こうして見ると結構差があるのかも"
+   ]
   },
   {
    "cell_type": "code",
